DeveloperOrg/force-app/main/default/objects/Admission__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <label>Course Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engg</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Polytechnic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>