DeveloperOrg/force-app/main/default/objects/Admission__c/fields/Degree_Name__c.field-meta.xml
<CustomField>
    <fullName>Degree_Name__c</fullName>
    <label>Degree Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Details__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Mech</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>BCOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>